<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/standing_cliff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white_color"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="@dimen/edit_text_widgth"
        android:hint="@string/enter_trip_name"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@color/white_color"
        android:id="@+id/edit_trip"
        android:gravity="center"/>
    <Button
        android:layout_width="@dimen/edit_text_widgth"
        android:layout_height="40dp"
        android:text="@string/add_trip"
        android:contentDescription="@string/add_trip"
        android:background="@color/main_blue_color"
        android:id="@+id/trip_text_button"
        android:layout_gravity="center"/>

</LinearLayout>