<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/border"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_details"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#5697ff"
            android:fontFamily="Roboto-Thin"/>

        <TextView
            android:id="@+id/done_button"
            android:text="@string/done"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#5697ff"
            android:clickable="true"
            android:layout_below="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"/>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:id="@+id/icon_recycler_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_budget"
        android:text="@string/budget_name"
        android:textStyle="bold"
        android:textColor="#5697ff"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/budget_name"
        android:layout_gravity="center"
        android:inputType="text"
        android:background="@drawable/border"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_budget_amount"
        android:text="@string/budget_amount"
        android:textStyle="bold"
        android:textColor="#5697ff"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/budget_amount"
        android:layout_gravity="center"
        android:layout_below="@id/budget_name"
        android:background="@drawable/border"
        android:inputType="numberDecimal"
        android:maxLines="1"/>


</LinearLayout>