<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/budget_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/width_60"
        android:layout_marginStart="@dimen/width_60"
        android:contentDescription="@string/budget_type"
        android:id="@+id/budget_icon"/>

    <LinearLayout
        android:layout_width="@dimen/width_120"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginLeft="@dimen/width_50"
        android:layout_marginStart="@dimen/width_50"
        android:layout_toRightOf="@id/budget_icon"
        android:layout_toEndOf="@id/budget_icon">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/the_budget_amount"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/budget_currency"
                android:text="@string/dollar_sign"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/the_budget_name"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:contentDescription="@string/minus_sign"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        android:background="@drawable/minus_sign"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/minus_sign"/>



</RelativeLayout>