<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bothTextviews"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/firstTextviews"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/light_blue_300" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_budget"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="bottom|center_horizontal"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="center"
                android:id="@+id/first_budget"
                android:textColor="#ffffff"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/secondTextviews"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/light_blue_100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="bottom|center_horizontal"
                android:text="@string/calculated_budget"
                android:textColor="#ffffff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/budget_currency_right"
                    android:textColor="#ffffff"
                    android:textSize="17sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:id="@+id/calculated_budget"
                    android:textColor="#ffffff"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_sign"
        android:id="@+id/floating_action"
        android:layout_above="@id/adView"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/bothTextviews"
        android:id="@+id/recycler_view_budget"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bothTextviews"

        android:layout_gravity="center|bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>