<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#ffffff"
            app:elevation="4dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:expandedTitleMarginStart="72dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/header_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/travel_lite"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/thelogo"
                    app:layout_collapseMode="parallax"
                    />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentInsetStart="19dp"
                    app:layout_collapseMode="pin">
                </android.support.v7.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|end"
                    app:layout_collapseMode="parallax"
                    android:orientation="horizontal">

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textSize="60sp"-->
                            <!--android:layout_marginRight="15dp"-->
                            <!--android:id="@+id/minus_trip_button"-->
                            <!--android:text="-"-->
                            <!--android:textColor="#afb8c6"/>-->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="37sp"
                            android:layout_marginRight="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="5dp"
                            android:id="@+id/add_trip_button"
                            android:text="@string/plus_sign"
                            android:textColor="#afb8c6"/>
                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </android.support.design.widget.CoordinatorLayout>



</RelativeLayout>
